ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: charlie
  labels:
    app.kubernetes.io/name: charlie
    app.kubernetes.io/part-of: charlie
