service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: charlie-server-service
spec:
  selector:
    app: charlie-server
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
  sessionAffinity: ClientIP
