ingress-web.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: charlie-server-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`automacao.hypera.com.br`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: charlie-server-service
          port: 80
