ingress-websecure.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: charlie-server-websecure
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: hypera-ca-secret
  routes:
    - match: Host(`automacao.hypera.com.br`)
      kind: Rule
      services:
        - name: charlie-server-service
          port: 80
